<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/textInputsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">


            <EditText
                android:id="@+id/editTextName"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_account"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/student_s_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextGuardian"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_guardian"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/guardian_s_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/dekko"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_gender" />

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dekko"
                    android:spinnerMode="dropdown"
                    android:textSize="18sp" />
            </LinearLayout>



            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editTextSchool"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:clickable="true"
                android:drawableStart="@drawable/ic_school"
                android:drawablePadding="16dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/dekko"
                android:hint="@string/school"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextClass"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_class"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/_class"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextSection"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_groups"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/section"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextRollNumber"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_shape"
                android:drawableStart="@drawable/ic_list_numbered"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/dekko"
                android:hint="@string/roll_no"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:paddingEnd="16dp"
                android:paddingBottom="5dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="325dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dekko"
                android:text="@string/continue_button"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </ScrollView>


    <!--  Bottom Sheet Layout  -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/schoolBottomSheetCoordinatorLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/school_bottom_sheet" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/overlayLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/overlay_layout_background"
        android:elevation="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:indeterminateTint="@color/primary_text_color_dark" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>